fixed 购物车没有库存不能购买 #382

--- a/app/views/people/cart/index.html.erb
+++ b/app/views/people/cart/index.html.erb
@@ -21,8 +21,9 @@
                 <th><input type="checkbox" class="check-all"/></th>
                 <th>图片</th>
                 <th>名称</th>
-                <th style="width:40px;">卖家</th>
+                <th>卖家</th>
                 <th>数量</th>
+                <th>单价</th>
                 <th>小计</th>
               </tr>
             </thead>
@@ -51,10 +52,12 @@
                       </div>
                     </td>
                     <td>
-                      <%= link_to '#' do %>
-                        <%= image_tag item.shop.try(:icon_url), :class => "img-polaroid img-seller" %>
-                      <% end %>
-                      <h5><%= item.shop.name %></h5>
+                      <div>
+                        <%= link_to '#' do %>
+                          <%= image_tag item.shop.try(:icon_url), :class => "img-polaroid img-seller" %>
+                        <% end %>
+                      </div>
+                      <h5><%= item.shop.name.truncate(5) %></h5>
                     </td>
                     <td>
                       <div>
@@ -68,7 +71,12 @@
                     </td>
                     <td>
                       <input type="hiddden" name="items[<%= item.id %>][price]" value="<%=item.price %>" class="hide"/>
-                      <price><%= number_to_currency(item.price) %></price>
+                      <%= number_to_currency(item.price) %>
+                    </td>
+                    <td>         
+                      <span class='total'>
+                        <%= number_to_currency(item.total) %>
+                      </span>
                     </td>
                   </tr>
                 <% end %>
