closed 重新审核出错 #420

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -301,3 +301,10 @@ table.index_table th{ text-align: center !important; }
     }
   }
 }
+
+.transfer_sheet{
+  .code{
+    font-size: 17px;
+    font-weight: bold;
+  }
+}
