--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -1,6 +1,6 @@
 <% side_nav_for 'fiery' %>
 <div id="main" class="content">
-  <section class="widget">
+  <div class="widget">
     <div class="body-category">
       <ul id="activity-category" class="nav nav-tabs activity-category" >
         <li class='active'>
@@ -10,7 +10,7 @@
         </li>
       </ul>
     </div>
-  </section>
+  </div>
   <%= render :partial => "activities/template" %>
 </div>
 
