--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="page-header">
+<div class="page-header">
   <!-- ie 8下面的背景 -->
   <div class='navbar-back affix-top' data-spy="affix" data-offset-top="20">
   </div>
@@ -7,7 +7,7 @@
       <%= render "topbar" %>
     </div>
   </div>
-</header>
+</div>
 
 <div id="active_dialog" class="active_dialog modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addActivityLabel" aria-hidden="true">
   <div class="modal-header">
