fixed ie8 订单无法在线支付 #421

--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,6 +1,6 @@
 <div id="main" class="content shop_wrap">
   <div class='container-fluid'>
-    <section class="widget">
+    <div class="widget">
       <div class='row'>
         <div class='shop_info span4'>
           <div class='photo'>
@@ -42,7 +42,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div>
 
     <div class='shop_products_panel'>
       <div id="shop_products">
