--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1735,6 +1735,7 @@ body>.global_chat {
     .chose_condition{
       margin-right: 0px;
       @include transparent(rgb(51, 51, 51), 0.4);
+      border: none;
 
       li.dropdown{
         a.dropdown-toggle{
