close 修改shop的模板 #430

--- a/app/views/communities/city_index.html.erb
+++ b/app/views/communities/city_index.html.erb
@@ -51,7 +51,7 @@
 </div>
 
 <script type="text/template" id= "seller_base_template">
-  <%= render "shops/template" %>
+  <%= render "shops/user_template" %>
 </script>
 
 <script type="text/template" id= "buyer_base_template">
