fixed js load bug

--- a/app/views/application/_category_selector.html.erb
+++ b/app/views/application/_category_selector.html.erb
@@ -6,5 +6,7 @@
 <%= build_menu2 Category.root %>
 
 <script type="text/javascript">
-	ts = new TreeSlide({ el: ".tree-nav" });
+	$(function(){
+		ts = new TreeSlide({ el: ".tree-nav" });
+	});
 </script>
