--- a/app/views/admins/shops/direct_transactions/show.html.erb
+++ b/app/views/admins/shops/direct_transactions/show.html.erb
@@ -6,7 +6,7 @@
       shop: {
         token: "<%=current_shop.im_token %>"
       },
-      realtime_url: '<%= faye_server_uri %>',
+      realtime_url: '<%= realtime_uri %>',
       token: "<%= token %>",
       el: $(".direct")})
   })
