--- a/app/widgets/chat/display.html.erb
+++ b/app/widgets/chat/display.html.erb
@@ -15,7 +15,7 @@
 <script type="text/javascript">
     chat_view = new ChatContact({
       el: $(".chat_friend_panel"),
-      faye_url: "<%=faye_server_uri %>",
+      faye_url: "<%=realtime_uri %>",
       current_user: {
         id: "<%=current_user.id %>",
         login: "<%=current_user.login %>",
