--- a/app/views/people/order_refunds/_apply_failure.html.erb
+++ b/app/views/people/order_refunds/_apply_failure.html.erb
@@ -1,5 +1,5 @@
 <div class="connect-<%=refund.id %> connect">
-  <p>请联系万流客服：XXXX-XXXXXX</p>
+  <p>请联系万流客服：<%=Settings.service_phone %></p>
 </div>
 
 <div class="container-fluid">
