--- a/app/views/ask_buy/show.dialog.erb
+++ b/app/views/ask_buy/show.dialog.erb
@@ -168,6 +168,7 @@
 <script type="text/template" id="ask_buy-comment-template">
   <%= render "comment.html" %>
 </script>
+
 <script type="text/javascript">
   $(function(){
     $(".item").first().addClass("active")
@@ -175,6 +176,13 @@
   <% if has_right_to_answer_ask_buy?(@ask_buy) %>
     var sp_elem = $(".form_answer_ask_buy .shop_product_id")
     <% shop_product = current_user.belongs_shop.has_product(@ask_buy.product_id) %>
+    sp_elem.bind('change', function(event){
+      var $target = $(event.currentTarget)
+      if (!_.isEmpty($target.val())) {
+        $target.parents('.control-group').removeClass('error')
+      }
+    })
+
     sp_elem.chosenEx({
       allow_single_deselect : true,
       placeholder_text : "选择一个商品",
