--- a/app/views/communities/_new_user.html.erb
+++ b/app/views/communities/_new_user.html.erb
@@ -1,5 +1,5 @@
-<div class='newer_panel newer'>
-    <div class="widget">
+<div class='newer_panel newer widget'>
+    <div>
         <div class="title row-fluid">
             <span style="font-size:25px;font-weight:bold;">新入驻成员</span>
             <div class="find_people_panel pull-right">
