修复商圈查询bug

--- a/app/assets/stylesheets/yellow_page.css.scss
+++ b/app/assets/stylesheets/yellow_page.css.scss
@@ -11,8 +11,8 @@
 
   .newer_panel{
     .alert{
-      margin-right: 20px;
-      margin-left: 20px;
+      // margin-right: 20px;
+      // margin-left: 20px;
     }
 
   }
