--- a/app/views/communities/_circle.dialog.erb
+++ b/app/views/communities/_circle.dialog.erb
@@ -1,3 +1,4 @@
+<% if circles.length > 0 %>
 <% circles.each do |circle| %>
 <div class='businiess_community span3' id="<%= circle.id %>">
     <div class="head_img">
@@ -52,3 +53,4 @@
     })
   })
 </script>
+<% end %>
