--- a/app/views/shop_products/show.dialog.erb
+++ b/app/views/shop_products/show.dialog.erb
@@ -34,6 +34,14 @@
                   <%=@shop_product.inventory %>
                 </p>
               </div>
+              <label class="control-label">
+                销量
+              </label>
+              <div class="controls">
+                <p class="text">
+                  <%=@shop_product.sales %>
+                </p>
+              </div>
               <label class="control-label" for="inputEmail">
                 商品评分
               </label>
