--- a/app/views/shop_products/_preview_template.html.erb
+++ b/app/views/shop_products/_preview_template.html.erb
@@ -11,6 +11,7 @@
         <h5 class="title href_name">{{name}}</h5>
         <p class='describe'>
           单价 <span class='price'>￥{{price}}</span>
+          销量 <span class='sales'>{{sales}}</span>
         </p>
       </div>
 
