--- a/app/views/people/order_refunds/_context.html.erb
+++ b/app/views/people/order_refunds/_context.html.erb
@@ -1,45 +1,6 @@
-<% seller = refund.order.seller %>
 <div class='row-fluid wrapper-box' data-group="<%= 'OrderTransaction_' + refund.order.try(:number) %>">
   <div class='left span7'>
-    <div id="refund<%=refund.id %>"
-      class="transaction order_refund refund-<%=refund.id %>-<%=refund.state %>"
-      state-id='<%=refund.id %>'
-      state-url="<%=page_person_order_refund_path(@people, refund) %>"
-      state-initial="<%=refund.state %>"
-      state-title="<%=refund.state_title %>"
-      state-event-url="<%=trigger_event_person_order_refund_path(@people, refund) %>"
-      url-root="<%=person_order_refund_path(@people, refund) %>"
-      data-token="<%= refund.order.try(:temporary_channel).try(:token) %>"
-       >
-      <div class="transaction-header">
-        <div class="avatar">
-          <%= image_tag seller.photos.header, :class => 'img-polaroid' %>
-        </div>
-
-        <div class="container-fluid info-header">
-          <div class='page-header'>
-            <div class="trasaction-title">
-              <div class="name">
-                <%= seller.name %>
-              </div>
-              <span class='pull-right'>
-                订单编号: <%=refund.order.try(:number) %>
-              </span>
-            </div>
-            <div class="transaction-address">
-              <%=seller.address.location %>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="transaction-body">
-        <%=render refund.state, :refund => refund %>
-        <div class='transaction-actions'>
-          <%=render "state_button", :refund => refund %>
-        </div>
-      </div>
-    </div>
+    <%=render :partial => "card", locals: {refund: refund} %>
   </div>
 
   <div class='span5 chat_wrapper'>
