--- a/app/views/activities/show.dialog.erb
+++ b/app/views/activities/show.dialog.erb
@@ -1,1 +1,1 @@
-<%= render "activities/#{@activity.activity_type}/show.dialog", activity: @activity, product_item: @product_item %>
+<%= render "activities/#{@activity.activity_type}/show", activity: @activity, product_item: @product_item %>
