--- a/app/views/activities/auction/_form.html.erb
+++ b/app/views/activities/auction/_form.html.erb
@@ -43,7 +43,7 @@
               required: true,
               input_html: {
                 name: 'activity[start_time]',
-                value:  (DateTime.now + (Settings.activity_start_time(1)).days).strftime('%m/%d/%Y')
+                value:  (DateTime.now + (Settings.activity_start_time(1)).days).strftime('%Y-%m-%d')
               } %>
 
   <%= f.input :end_time,
@@ -51,7 +51,7 @@
               required: true,
               input_html: {
                 name: 'activity[end_time]',
-                value: (DateTime.now + (Settings.activity_end_time(8)).days).strftime('%m/%d/%Y')
+                value: (DateTime.now + (Settings.activity_end_time(8)).days).strftime('%Y-%m-%d')
               } %>
   </div>
 
