--- a/app/views/activities/score/_form.html.erb
+++ b/app/views/activities/score/_form.html.erb
@@ -30,13 +30,10 @@
 
     <%= f.input :limit_score %>
 
-
     <%= f.input :start_time,
-                :as         => :date_picker, id: 'start_time', value: 'yyyy/MM/dd hh:mm:ss'       %>
-
-
+                :as         => :date_picker, id: 'start_time', value: 'yyyy-MM-dd hh:mm:ss' %>
 
     <%= f.input :end_time,
-                :as         => :date_picker, id: 'end_time', value: 'yyyy/MM/dd hh:mm:ss'  %>
+                :as         => :date_picker, id: 'end_time', value: 'yyyy-MM-dd hh:mm:ss' %>
 
 <% end %>
