修复商品管理中的bug

--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -182,7 +182,7 @@
         dataType: 'json'
       },
       validate: function(value) {
-        if(isNaN($.trim(value))) {
+        if(isNaN($.trim(value)) || $.trim(value) == "") {
             return '价格与数量必须为数字';
             value = 0.0
         }
