--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -329,12 +329,12 @@ ul {
 		width: 150px;
 		border: none;
 		color: #f8f8f8;
-		padding-left: 26px;
+		padding-left: 59px;
 		line-height: 20px;
 		@include border-radius(1px);
 		@include transition(width 0.2s);
 		@include transparent(rgb(51,51,51),0.4);
-		background: url(search-white.png) 5px 5px no-repeat rgba(51,51,51,0.4);
+		/*background: url(search-white.png) 5px 5px no-repeat rgba(51,51,51,0.4);*/
 
 		&:focus {
 			width: 250px;
@@ -1733,9 +1733,10 @@ body>.global_chat {
 .page-header{
   .navbar-search{
     .chose_condition{
-      margin-right: 0px;
-      @include transparent(rgb(51, 51, 51), 0.4);
+      margin-right: 0px;      
       border: none;
+      position: absolute;
+      z-index: 5;
 
       li.dropdown{
         a.dropdown-toggle{
