--- a/app/views/layouts/wizard.html.erb
+++ b/app/views/layouts/wizard.html.erb
@@ -9,10 +9,10 @@
     <%= render "logo" %>
     <%#= render "left_sidebar" %>
     <div class="wrap">
-        <%= render "header_wizard" %>
-        <div class='container-fluid'>
-          <%= yield %>
-        </div>
+      <%= render "header_wizard" %>
+      <div class='container-fluid'>
+        <%= yield %>
+      </div>
     </div>
     <div id="popup-layout"></div>
     <%#= render "right_sidebar" %>
@@ -20,45 +20,12 @@
     <%= render "footer" %>
     <%# Javascript at the bottom for fast page loading %>
     <%= render "baidu_analyzer" %>
+    <%= javascript_include_tag "wizard" %>
     <%= javascript_include_tag "polyfills" %>
-    <%= javascript_include_tag :wizard %>
 
-  <script type="text/javascript">
-
-    // window.clients = Realtime.connect({
-    //   server_uri: '<%= realtime_uri %>',
-    //   token: '<%= current_user.try(:im_token) %>',
-    //   current_user: '<%= current_user.try(:login) %>',
-    //   current_shop: '<%= current_shop.try(:name) %>',
-    //   form_token: '<%= form_authenticity_token %>'
-    // });
-
-    // $("body").addClass('right-mini');
-    // ChatManager.getInstance({ el: $(".right-sidebar .body") });
-    // $( window ).resize(function() {
-    //   $viewportHeight = $(window).height()
-    //   $( ".right-sidebar .body" ).css("height", $viewportHeight);
-    //   $( ".right-sidebar .slimScrollDiv" ).css("height", $viewportHeight);
-    // });
-
-    $(function(){
-
-      // window.topbar = new TopBar({el: "#topbar"});
-      // NotificationViewList.startup({
-      //   el: $(".notification-menu"),
-      //   current_user_login: '<%= current_user.login %>'
-      // });
-
-      // $(document).delegate( ".connect_by_self", "click", function(){
-      //   clients.socket.socket.socket.reconnect()
-      //   $(".popover-content").html("正在连接...")
-      // })
-
-    })
-  </script>
-  <%# 开发环境下显示500错误信息 %>
-  <% unless Rails.env.production? %>
-    <%= javascript_include_tag "show_500_error_in_dev" %>
-  <% end %>     
+    <%# 开发环境下显示500错误信息 %>
+    <% unless Rails.env.production? %>
+      <%= javascript_include_tag "show_500_error_in_dev" %>
+    <% end %>     
   </body>
 </html>
