--- a/app/views/people/delivery_addresses/index.html.erb
+++ b/app/views/people/delivery_addresses/index.html.erb
@@ -56,8 +56,10 @@
 </div>
 
 <script type="text/javascript">
-  new AddressesView({
-    el: "div.addresses-panel",
-    formName: "delivery_address"
+  $(function(){
+    new AddressesView({
+      el: "div.addresses-panel",
+      formName: "delivery_address"
+    })
   })
 </script>
