--- a/app/views/layouts/people.html.erb
+++ b/app/views/layouts/people.html.erb
@@ -15,14 +15,12 @@
   <div id="popup-layout"></div>
   <%= render "right_sidebar" %>
   <%= render "footer" %>
-  <%= javascript_include_tag "polyfills" %>
   <%= render "baidu_analyzer" %>
-  <%= javascript_include_tag :people %>
+  <%= javascript_include_tag "people" %>
   <%= javascript_include_tag "my_cart" %>  
+  <%= javascript_include_tag "polyfills" %>
 
   <script type="text/javascript">
-
-
     window.clients = Realtime.connect({
       server_uri: '<%= realtime_uri %>',
       token: '<%= current_user.try(:im_token) %>',
@@ -31,12 +29,7 @@
       form_token: '<%= form_authenticity_token %>'
     });
 
-
-
     $(function(){
-      console.log('ready');
-
-
       // new Upload({
       //   verify_authenticity_token: "<%= form_authenticity_token %>",
       //   action: "/users/upload_avatar/",
@@ -51,7 +44,6 @@
       //   }]
       // });
 
-
       // new Upload({
       //   verify_authenticity_token: "<%= form_authenticity_token %>",
       //   action: "/user_checkings/upload_photo/",
@@ -65,7 +57,6 @@
       //     photo: "<%= @user_checking.try(:ower_photo) %>"
       //   }]
       // })   
-
 
       $("body").addClass('right-mini');
       ChatManager.getInstance({ el: $(".right-sidebar .body") });
