--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -12,7 +12,7 @@
     </header>
     <div class="body tab-content">
       <div id="categories" class="tab-pane active clearfix">
-        <div class='search-header'>
+        <div class='search-header hide'>
           <div class="input-append controls-row">
             <input class="span8" type="search" id="search-input3">
             <button type="button" class="btn btn-transparent span4">搜索</button>
@@ -191,7 +191,7 @@
       });
     }
 
-    $(document).delegate( '.my_product_list>li', 'click',function(i, elem){
+    $(document).delegate('.my_product_list>li', 'click', function(i, elem) {
       bind_editable($(this), "price");
       bind_editable($(this), "inventory");
     });    
