--- a/app/views/application/_category_selector.html.erb
+++ b/app/views/application/_category_selector.html.erb
@@ -7,6 +7,7 @@
 
 <script type="text/javascript">
 	$(function(){
-		ts = new TreeSlide({ el: ".tree-nav" });	
+		ts = new TreeSlide({ el: ".tree-nav" });
+		ts.openFirstRoot();
 	})	
 </script>
