--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -104,7 +104,7 @@
 
     <script type="text/template" id="product_show" >
       <li id="{{ id }}" class='product_item'>
-        <img src="{{ url }}" alt="{{name}}" class='product_img' />
+        <img src="{{ photos.icon }}" alt="{{name}}" class='product_img' />
         <h5>{{ name }} <b>{{ brand_name }}</b></h5>
         <section> 单价 <span class='label label-default editable-click price'>{{ price }}<i class='icon-edit'></i></span>
         </section>
