--- a/app/views/completing_shop/_add_products.html.erb
+++ b/app/views/completing_shop/_add_products.html.erb
@@ -1,16 +1,16 @@
 <div class='row-fluid dialog_product'>
   <div class="span4 product_tree_panel">
     <header>
-      <ul class="nav nav-tabs" style="position:relative;">
-        <li class="active" id ="sort" style="position: relative;">
+      <ul class="nav nav-tabs">
+        <li class="active" id ="sort">
           <a href="#categories" data-toggle="tab">分类</a>
         </li>
-        <div class="brand_panel row-fluid " style="position:absolute;text-align: left; left:55px; top:8px;">
-          <a class="btn pick_brand" style="width:70px;">
+        <div class="brand_panel row-fluid">
+          <a class="btn pick_brand">
             选择品牌
             <b class="caret pick_brand"></b>
           </a>
-          <div class="brand_list span12" style="border: 5px solid rgba(219, 224, 193, 0.81);display:none; position:absolute; background-color:white; color:black;z-index:9999;" >
+          <div class="brand_list span12" >
             <strong class="check_tips row-fluid span12">请勾选品牌</strong>
             <div class="brand_content"><img src="/assets/loading_max.gif" />正在加载...</div>
             <div class="row-fluid span12 ">
