fixed 修改卖家订单等待退货名词 #469

--- a/app/views/admins/shops/transactions/buttons/_waiting_refund_buttons.html.erb
+++ b/app/views/admins/shops/transactions/buttons/_waiting_refund_buttons.html.erb
@@ -1,5 +1,5 @@
 <span class="pull-right">
-  <span class='state-description'>等待退货</span>
+  <span class='state-description'>等待同意退货</span>
   <div class="btn-group">
     <%= link_to 'javascript:void(0)', :class => 'btn btn-large disabled' do %>
       <%=raw "下一步&nbsp;&nbsp;&nbsp;#{caret(:right)}" %>
